# zopfli-rs

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md  check.sh  test-all-feature-combinations.sh  test-compression.sh
examples/: zopfli.rs
src/: blocksplitter.rs  cache.rs  deflate.rs  gzip_container.rs  hash.rs  katajainen.rs  lib.rs  lz77.rs  squeeze.rs  tree.rs  util.rs  zlib_container.rs
