[package]
name = "zopfli"
version = "0.0.1"
authors = ["Szabolcs Berecz <szabolcs.berecz@gmail.com>"]
repository = "https://github.com/khernyo/zopfli-rs.git"
homepage = "https://github.com/khernyo/zopfli-rs"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
log = "*"
libc = "0.2"

[dev-dependencies]
flate2 = "*"

[features]
default = ["longest-match-cache", "hash-same", "hash-same-hash", "shortcut-long-repetitions", "lazy-matching"]

# Whether to use the longest match cache for ZopfliFindLongestMatch. This cache
# consumes a lot of memory but speeds it up. No effect on compression size.
longest-match-cache = []

# Enable to remember amount of successive identical bytes in the hash chain for
# finding longest match
# required for ZOPFLI_HASH_SAME_HASH and ZOPFLI_SHORTCUT_LONG_REPETITIONS
# This has no effect on the compression result, and enabling it increases speed.
hash-same = []

# Switch to a faster hash based on the info from ZOPFLI_HASH_SAME once the
# best length so far is long enough. This is way faster for files with lots of
# identical bytes, on which the compressor is otherwise too slow. Regular files
# are unaffected or maybe a tiny bit slower.
# This has no effect on the compression result, only on speed.
hash-same-hash = ["hash-same"]

# Enable this, to avoid slowness for files which are a repetition of the same
# character more than a multiple of ZOPFLI_MAX_MATCH times. This should not affect
# the compression result.
shortcut-long-repetitions = ["hash-same"]

# Whether to use lazy matching in the greedy LZ77 implementation. This gives a
# better result of ZopfliLZ77Greedy, but the effect this has on the optimal LZ77
# varies from file to file.
lazy-matching = []

nightly = []
